<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="15dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/StringLayout"
                android:text="@string/question_1" />

            <TextView
                style="@style/space_top"
                android:text="@string/Q_1" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/checkbox_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="15dp"
                    android:text="@string/Q_1_Udacity" />

                <CheckBox
                    android:id="@+id/checkbox_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:text="@string/Q_1_Edx" />

                <CheckBox
                    android:id="@+id/checkbox_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="15dp"
                    android:text="@string/Q_1_Twitter" />

                <CheckBox
                    android:id="@+id/checkbox_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="15dp"
                    android:text="@string/Q_1_Pluralsight" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <TextView
                style="@style/StringLayout"
                android:text="@string/question_2" />

            <TextView
                style="@style/space_top"
                android:text="@string/Q_2" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radio1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="15dp"
                    android:onClick="questionTwoRadio"
                    android:text="@string/Q_2_Windows" />

                <RadioButton
                    android:id="@+id/radio2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="15dp"
                    android:onClick="questionTwoRadio"
                    android:text="@string/Q_2_Linux" />

                <RadioButton
                    android:id="@+id/radio3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="15dp"
                    android:onClick="questionTwoRadio"
                    android:text="@string/Q_2_Java" />

                <RadioButton
                    android:id="@+id/radio4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="15dp"
                    android:onClick="questionTwoRadio"
                    android:text="@string/Q_2_Linux" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <TextView
                style="@style/StringLayout"
                android:text="@string/question_3" />

            <TextView
                style="@style/space_top"
                android:text="@string/Q_3" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radio5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="15dp"
                    android:onClick="questionThreeRadio"
                    android:text="@string/Q_3_Kotlin" />

                <RadioButton
                    android:id="@+id/radio6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="15dp"
                    android:onClick="questionThreeRadio"
                    android:text="@string/Q_3_Python" />

                <RadioButton
                    android:id="@+id/radio7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="15dp"
                    android:onClick="questionThreeRadio"
                    android:text="@string/Q_3_Android" />

                <RadioButton
                    android:id="@+id/radio8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="15dp"
                    android:onClick="questionThreeRadio"
                    android:text="@string/Q_3_HTML" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <TextView
                style="@style/StringLayout"
                android:text="@string/question_4" />

            <TextView
                style="@style/space_top"
                android:text="@string/Q_4" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/thanos" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radio9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="15dp"
                    android:onClick="questionFourRadio"
                    android:text="@string/Q_4_Thanos" />

                <RadioButton
                    android:id="@+id/radio10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="15dp"
                    android:onClick="questionFourRadio"
                    android:text="@string/Q_4_Akshay_Kumar" />

                <RadioButton
                    android:id="@+id/radio11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="15dp"
                    android:onClick="questionFourRadio"
                    android:text="@string/Q_4_Sanjay_Dutt" />

                <RadioButton
                    android:id="@+id/radio12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="15dp"
                    android:onClick="questionFourRadio"
                    android:text="@string/Q_4_Ranbir_Kapoor" />
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <TextView
                style="@style/StringLayout"
                android:text="@string/question_5" />

            <TextView
                style="@style/space_top"
                android:text="@string/Q_5" />
            <EditText
                android:id="@+id/EditText_Q5"
                style="@style/StringLayout"
                android:layout_width="150dp"
                android:hint="@string/Q_5_Google" />
        </LinearLayout>
        <Button
            android:layout_marginTop="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="getScore"
            android:text="@string/Ans"/>
<TextView
    android:id="@+id/score"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/Score"
    android:textSize="50sp"/>
    </LinearLayout>
</ScrollView>